# Computer-Graphics-Practice

3DCC Lab 1/DirectX11/: CMakeLists.txt  main.cpp  renderer.h
3DCC Lab 1/DirectX11/Shaders/: PixelShader.hlsl
3DCC Lab 1/Gateware/: Gateware.h  version.txt
3DCC Lab 1/Gateware/documentation/html/: _g_audio_8h_source.html  _g_audio_defines_8h_source.html  _g_blitter_8h_source.html  _g_collision_8h_source.html  _g_core_defines_8h_source.html  _g_direct_x12_surface_8h_source.html  _g_event_cache_8h_source.html  _g_event_generator_8h_source.html  _g_event_receiver_8h_source.html  _g_file_8h_source.html  _g_graphics_defines_8h_source.html  _g_input_8h_source.html  _g_logic_8h_source.html  _g_math2_d_defines_8h_source.html  _g_matrix2_d_8h_source.html  _g_sound_8h_source.html  _g_thread_shared_8h_source.html  _g_vector_8h_source.html  _g_vulkan_surface_8h_source.html  annotated.html  class_g_w_1_1_a_u_d_i_o_1_1_g_audio3_d.html  class_g_w_1_1_a_u_d_i_o_1_1_g_music.html  class_g_w_1_1_a_u_d_i_o_1_1_g_sound-members.html  class_g_w_1_1_c_o_r_e_1_1_g_event_cache-members.html  (+128 more)
3DCC Lab 2/DirectX11/: CMakeLists.txt  main.cpp  renderer.h
CompGraphics Lab 1/: CompGraphics_Assignment01.sln
CompGraphics Lab 1/CompGraphics_Assignment01/: main.cpp  tiles_12.h
CompGraphics Lab 2/: Main.cpp  Math_Functions.h  Rasterization_Functions.h  Shaders.h
CompGraphics Lab 3/: Defines.h  Main.cpp  Math_Functions.h  Rasterization_Functions.h  Shaders.h
CompGraphics Lab 4/: Defines.h  Main.cpp  Math_Functions.h  Rasterization_Functions.h  Shaders.h
Release Builds/3DCC Lab 1/Shaders/: VertexShader.hlsl
Release Builds/3DCC Lab 2/Shaders/: PixelShader.hlsl  VertexShader.hlsl
(+159 files in other folders)
